test/let9.slq

def main() ⇒ let return 2 in assert(0); /// error
